# eatmyshorts

./: .gitignore  Cargo.toml  Makefile  README.md  input.json
aws/: main.tf
src/: api.rs  main.rs
