[package]
name = "eatmyshorts"
version = "0.1.0"
authors = ["Jacobious52 <jacobgonzalez5252@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "bootstrap"
path = "src/main.rs"

[dependencies]
lambda_runtime = "^0.2"
serde = "^1"
serde_json = "^1"
serde_derive = "^1"
log = "^0.4"
simple_logger = "^1"
simple-error = "^0.2"
chrono = { version = "^0.4", features = ["serde"] }
url = "^2"
rand = "^0.7"
